Closed Bug 678207 Opened 14 years ago Closed 14 years ago

With GL layers enabled, Fennec crashes on startup

Categories

(Core :: Graphics, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: ajuma, Assigned: ajuma)

References

Details

(Keywords: regression)

Attachments

(1 file)

On the current (August 11) Nightly, if GL Layers are enabled, Fennec always crashes on startup. Regression range: The crash occurs with http://hg.mozilla.org/mozilla-central/rev/93328efd3d77 but not with http://hg.mozilla.org/mozilla-central/rev/aee7dcfde223
We need to find the specific changeset. A wild guess might be the changes for Bug 648484.
(In reply to Benoit Girard (:BenWa) from comment #1) > We need to find the specific changeset. > > A wild guess might be the changes for Bug 648484. Yes, this is indeed caused by one of the changes for Bug 648484. I'm working on finding which one.
Depends on: 648484
This is bad. What's the crash?
It turns out that as result of the changes to the interface of GetLayerManager in part 3 of bug 648484, calls in nsWindow.cpp to GetLayerManager(nsnull) were going to nsBaseWidget::GetLayerManager instead of nsWindow::GetLayerManager as defined in nsWindow.cpp. As a result, sGLContext in nsWindow.cpp was never initialized, and we crashed when attempting to dereference it in nsWindow::OnDraw. Patch on its way.
This makes the interface of GetLayerManager on Android consistent with the changes introduced in Bug 648484.
Attachment #552502 - Flags: review?(jones.chris.g)
Comment on attachment 552502 [details] [diff] [review] Fix interface of nsWindow::GetLayerManager on Android Nice.
Attachment #552502 - Flags: review?(jones.chris.g) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: