Bug 678207 - Fix interface of nsWindow::GetLayerManager on Android. r=cjones